--- a/wiki/entries/.NET.md
+++ b/wiki/entries/.NET.md
@@ -1,1 +1,3 @@
+#.NET
+
 .NET Framework (pronounced as "dot net") is a software framework developed by Microsoft that runs primarily on Microsoft Windows
